<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".toy_story">

    <ImageView
        android:id="@+id/toyStory"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/toy_story"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/v1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.07"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/v2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.93"
        />

    <ImageView
        android:id="@+id/coverPage"
        android:layout_width="120dp"
        android:layout_height="150dp"
        android:src="@drawable/cover_page"
        app:layout_constraintStart_toEndOf="@id/v1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/h1"
        app:layout_constraintVertical_bias="0.9"
    />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="@id/coverPage"
        app:layout_constraintEnd_toStartOf="@id/v2"
        app:layout_constraintTop_toBottomOf="@id/toyStory"
        app:layout_constraintBottom_toTopOf="@id/h1"
        app:layout_constraintHorizontal_bias="0.2"
        >

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textStyle="bold"
            android:textSize="24sp"
            />

        <TextView
            android:id="@+id/txtDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            />

    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />

    <Button
        android:id="@+id/rentBtn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/rent"
        app:layout_constraintStart_toEndOf="@id/v1"
        app:layout_constraintEnd_toStartOf="@id/buyBtn"
        app:layout_constraintTop_toBottomOf="@id/h1"
        app:layout_constraintBottom_toTopOf="@id/h2"
        app:layout_constraintHorizontal_bias="0"
        />

    <Button
        android:id="@+id/buyBtn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/buy"
        app:layout_constraintStart_toEndOf="@id/rentBtn"
        app:layout_constraintEnd_toStartOf="@id/v2"
        app:layout_constraintTop_toBottomOf="@id/h1"
        app:layout_constraintBottom_toTopOf="@id/h2"
        app:layout_constraintHorizontal_bias="1.0"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.55"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        app:layout_constraintStart_toEndOf="@id/v1"
        app:layout_constraintEnd_toStartOf="@id/v2"
        app:layout_constraintTop_toBottomOf="@id/h2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.1"
        android:paddingHorizontal="35dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>